unpackaged/main/default/objects/Service_Estimation_Lines__c/Service_Estimation_Lines__c.object-meta.xml
<CustomObject>
    <label>Service Estimation Line</label>
    <nameField>
        <displayFormat>SEL-{00000}</displayFormat>
        <label>Ref. No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Estimation Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>