unpackaged/main/default/objects/Service_Estimation_Lines__c/fields/Chargeable_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Chargeable_to_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chargeable to Customer</label>
    <type>Checkbox</type>
</CustomField>