unpackaged/main/default/objects/Service_Estimation_Lines__c/fields/Customer_Approved__c.field-meta.xml
<CustomField>
    <fullName>Customer_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Approved</label>
    <type>Checkbox</type>
</CustomField>