unpackaged/main/default/objects/Service_Estimation_Lines__c/fields/Estimation__c.field-meta.xml
<CustomField>
    <fullName>Estimation__c</fullName>
    <label>Estimation</label>
    <referenceTo>Estimation__c</referenceTo>
    <relationshipLabel>Service Estimation Lines</relationshipLabel>
    <relationshipName>Service_Estimation_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>