unpackaged/main/default/objects/Service_Estimation_Lines__c/fields/Parts_Material_Price__c.field-meta.xml
<CustomField>
    <fullName>Parts_Material_Price__c</fullName>
    <label>Parts/Material Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>